--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "cherio": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "node-telegram-bot-api": "^0.40.0"
-  },
-  "devDependencies": {
+    "node-telegram-bot-api": "^0.40.0",
     "nodemon": "^2.0.2"
   }
 }
