--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "CurEx",
-  "version": "1.0.0",
-  "description": "CurEx",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon babel-node index --presets=env"
-  },
-  "author": "gorillasz",
-  "license": "ISC",
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "cherio": "^1.0.0-rc.2",
-    "moment": "^2.24.0",
-    "node-fetch": "^2.6.0",
-    "node-telegram-bot-api": "^0.40.0",
-    "nodemon": "^2.0.2"
-  }
+    "name": "CurEx",
+    "version": "1.0.0",
+    "description": "CurEx",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon babel-node index --presets=env"
+    },
+    "author": "gorillasz",
+    "license": "ISC",
+    "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "cherio": "^1.0.0-rc.2",
+        "moment": "^2.24.0",
+        "node-fetch": "^2.6.0",
+        "node-telegram-bot-api": "^0.40.0",
+        "utils": "^0.3.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.2"
+    }
 }
